--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "less": "^2.3.1"
   },
   "devDependencies": {
+    "less": "^3.0.0-alpha.3",
     "mocha": "^4.0.1",
     "strip-indent": "^2.0.0"
   },
